--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html ng-app = "byrd-bloc-chat">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <script src="/scripts/app.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src = "https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+    <script src = "https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+    <script src = "/scripts/app.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyDKLj7u2cDPAUX1SN1VISmtexgn9QFv3NA" ,
+            authDomain: "byrd-bloc-chat.firebaseapp.com" ,
+            databaseURL: "https://byrd-bloc-chat.firebaseio.com" ,
+            storageBucket: "byrd-bloc-chat.appspot.com" ,
+            messagingSenderId: "936898683021"
+
+        };
+        firebase.initializeApp(config);
+    </script>
 </body>
 </html>
